# diciphr

./: LICENSE  README.md  pyproject.toml
diciphr/: dicoms.py  diffusion.py  nifti_utils.py  oscar.py  pipeline_utils.py  registration.py  utils.py
diciphr/connectivity/: __init__.py  connmat_stats.py  connmat_utils.py  nodes.py  systems.py  topology.py
diciphr/fernet/: free_water.py  pipeline.py  utils.py
diciphr/qc/: build_qc_database.py  conformity.py  fov.py  parse_qcnet.py  registration.py
diciphr/scripts/: compute_dti_scalars.py  concatenate_dwis.py  connectome_measures.py  convert_dicoms_to_nifti.py  convert_tracks.py  crop_pad_nifti.py  cut_region.py  downsample_tracks.py  dti_denoise.py  dti_eddy.py  dti_estimate.py  dti_preprocess.py  dti_topup.py  dwi_bias_correct.py  extract_b0.py  extract_shells.py  extract_shells_from_multishell_dwi.py  fernet.py  fernet_fw_dwi.py  fernet_regions.py  filter_tracks.py  flip_bvecs.py  harmonize_data.py  n4_bias_correction.py  ols_analysis.py  oscar.py  parse_dwi_directory.py  remove_dwi_gradients.py  reorient_nifti.py  replace_labels.py  resample_image.py  roi_stats.py  synb0_disco.py  trackvis_scene.py  voxelwise_nonparametric_tests.py  zscores.py
diciphr/statistics/: __init__.py  clustering.py  elementwise.py  harmonization.py  regression.py  roi_stats.py  stats_utils.py  zscores.py
diciphr/tractography/: __init__.py  track_stats.py  track_utils.py
pipelines/: Create_Schaefer.sh  DTI_Preprocess.sh  Fernet.sh  Freesurfer.sh  Registration_DTI-Eve.sh  Registration_DTI-T1.sh  Registration_T1-Eve.sh  brainmage.sh  oscar_dwiqc_grid.sh
